--- a/styles/youtube-header.css
+++ b/styles/youtube-header.css
@@ -40,7 +40,8 @@ width: 150px;
 }
 @media (min-width: 0px) and (max-width: 509px){
   .left-section {
-    width: 50px;
+    width: 0px;
+    margin: 0px;
   }
   .right-section {
     width: 0px;
@@ -71,8 +72,9 @@ width: 150px;
   border-style: solid;
   border-top-left-radius: 2px;
   border-bottom-left-radius: 2px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
   border-width: 1px;
-  
   box-shadow: inset 1px 2px 3px rgba(204,204,204, 0.02);
   z-index: 1;
 }
